--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov  5 14:19:11 2003  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in: fixed "--with-html-doc" option (patch from Daniel)
+
 Wed Nov  5 13:39:47 2003  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in: fixed "--with-mozilla-ver" option for ./configure
