--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jan 10 19:03:17 2004  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in src/gnutls/ciphers.c src/gnutls/digests.c src/gnutls/hmac.c:
+	restored support for gnutls < 1.0 by request from John
+
 Mon Jan  5 12:55:44 2004  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in docs/download.html docs/index.html 
