--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan 12 10:30:24 2004  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* xmlsec-config.in: fixed nss configuration bug (reproted by John)
+
 Sat Jan 10 19:03:17 2004  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in src/gnutls/ciphers.c src/gnutls/digests.c src/gnutls/hmac.c:
