--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jan 22 16:24:44 2004  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in: and one more gnutls configuration bug from John
+
 Thu 22 Jan 2004 10:56:33 AM PST <aleksey@aleksey.com>
 	
 	* src/buffer.c src/list.c: don' pass NULL to xmlRealloc()
