--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jan 23 09:34:10 2004  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in: and one more config bug from John
+
 Thu Jan 22 16:24:44 2004  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in: and one more gnutls configuration bug from John
