--- a/man/xmlsec1.1
+++ b/man/xmlsec1.1
@@ -38,6 +38,12 @@ encrypt data and output XML document
 .TP
 \fB\-\-decrypt\fR
 decrypt data from XML document
+.TP
+\fB\-\-xkis\-server\-locate\fR
+process data as XKMS/XKISS Locate request
+.TP
+\fB\-\-xkis\-server\-validate\fR
+process data as XKMS/XKISS Validate request
 .SH OPTIONS
 .HP
 \fB\-\-ignore\-manifests\fR
