--- a/man/xmlsec1-config.1
+++ b/man/xmlsec1-config.1
@@ -9,10 +9,10 @@ xmlsec1-config \- manual page for xmlsec1-config 1.2.3
 Known values for OPTION are:
 .TP
 \fB\-\-prefix\fR=\fIDIR\fR
-change XMLSEC prefix [default /usr/local]
+change XMLSEC prefix
 .TP
 \fB\-\-exec\-prefix\fR=\fIDIR\fR
-change XMLSEC executable prefix [default /usr/local]
+change XMLSEC executable prefix
 .TP
 \fB\-\-libs\fR
 print library linking information
@@ -31,5 +31,4 @@ output version information
 .TP
 \fB\-\-crypto\fR=\fILIB\fR
 configure with XMLSEC crypto library (one of the
-following: none default  openssl nss)
-[default "openssl"]
+following: none default openssl gnutls nss)
