--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jan 26 11:48:42 2004  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in docs/download.html docs/index.html docs/news.html
+	include/xmlsec/version.h: preparation for 1.2.4 release
+	* docs/related.html: added link to PyXmlSec project
+
 Fri Jan 23 16:30:38 2004  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* docs/xmlsec-man.html man/xmlsec1-config.1 man/xmlsec1.1 
