--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Feb  2 16:55:13 2004  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* include/xmlsec/xkms.h src/strings.c src/xkms.c: read xkms RequestAbstractType
+	and write xkms ResponseQbstractType (no signatures) 
+	* Makefile.am tests/testXKMS.sh: created check-xkms target and script
+	* tests/aleksey-xkms-01: even more keys (der/pkcs12 formats), 
+	"key not found" tests
+
 Mon Feb  2 13:12:07 2004  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* apps/xmlsec.c include/xmlsec/xkms.h include/xmlsec/xmlsec.h src/xkms.c:
