--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Wed Feb  4 01:26:51 2004  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* apps/xmlsec.c: created new --xkms-format parameter 
+	(plain/soap-1.1/soap-1.2)
+	* configure.in xmlsec.spec.in include/xmlsec/Makefile.am 
+	include/xmlsec/private/*: move internal xkms declarations to 
+	a newly created "xmlsec/private" includes folder
+	* include/xmlsec/strings.h include/xmlsec/xkms.h 
+	src/strings.c src/xkms.c tests/testXKMS.sh: preparation for soap
+	request/response suppport
+
 Tue Feb  3 22:44:36 2004  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* apps/xmlsec.c: combined xkms server commands into one
