--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 19 16:01:38 2004  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* examples/.cvsignore examples/Makefile examples/Makefile.w32 
+	examples/xkms-server.c: started work on xkms server example
+
 Thu Feb 19 12:32:55 2004  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* include/xmlsec/xkms.h include/xmlsec/xmltree.h src/xkms.c 
