--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-13  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* configure.in docs/download.html docs/index.html docs/news.html:
+	1.2.5 release preparation
+
 2004-03-16  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* include/xmlsec/strings.h src/mscrypto/certkeys.c
