--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-16 Aleksey Sanin <aleksey@aleksey.com>
+
+	* Fixed xmlSecTmplNodeWriteNsList() function
+	
 Wed Jun  9 16:35:01 CEST 2004 Igor Zlatkovic <igor@zlatkovic.com>
 
 	* win32/configure.js win32/Makefile.* minor changes for the new
