--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-17  Aleksey Sanin <aleksey@aleksey.com>
+
+	* src/xmlenc.c: added NULL check
+	* src/xmltree.c: fixed memory leak
+
 2004-06-16 Aleksey Sanin <aleksey@aleksey.com>
 
 	* Fixed xmlSecTmplNodeWriteNsList() function
