--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-07  Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* src/xmltree.c: fixed xmlSecGenerateID
+
 2004-10-27  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/dl.c: set dl memory functions before initialization (Daniel Vogelheim)
