--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-02-22  Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* src/bn.c src/mscrypto/crypto.c src/mscrypto/x509.c 
+        src/mscrypto/x509vfy.c tests/testDSig.sh 
+	tests/aleksey-xmldsig-01/x509data-sn-test.tmpl
+	tests/aleksey-xmldsig-01/x509data-sn-test.xml
+	tests/keys/README tests/keys/*: support for 
+	negative serial numbers, mscrypto cleanup
+
 2005-02-21  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* docs/* docs/api/*  man/*: updated docs
