--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-25  Aleksey Sanin  <aleksey@aleksey.com>
+	* include/xmlsec/mscrypto/app.h include/xmlsec/mscrypto/x509.h
+	src/mscrypto/app.c src/mscrypto/x509vfy.c:
+	added function to add custom MS cert stores
+	to the xmlsec-mscrypto default keys manager
+	(based on the OO.org patch).
+
 2005-02-22  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* docs/*: updated docs
