--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-01  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* src/mscrypto/app.c: added stubs for adding keys to mscrypto
+  	keys manager from ms key handle
+
 2005-02-28  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/mscrypto/certkeys.c: WinNT 4.0 support (based on the OO.org patch)
