print more detailed error message (based on the OO.org patch)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-05  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* src/nss/digests.c src/nss/hmac.c src/nss/pkikeys.c 
+	  src/nss/signatures.c src/nss/x509.c src/nss/x509vfy.c: 
+	  print more detailed error message (based on the OO.org patch)
+
 2005-03-04  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/mscrypto/x509vfy.c: fixed cert search (based on the OO.org patch)
