--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-06  Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* include/xmlsec/nss/crypto.h src/nss/app.c 
+	src/nss/crypto.c src/nss/x509.c: fixed nss initialization
+	problem
+
 2005-03-05  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/nss/pkikeys.c: check that input public and private 
