--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-12  Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* src/openssl/app.c: fixed "disable-x509" build option 
+	(patch from Bernd Becker)
+
 2005-05-11  Aleksey Sanin  <aleksey@aleksey.com>
 	
 	* src/openssl/signatures.c: fixed "disable-dsa" build option 
