--- a/tests/keys/README
+++ b/tests/keys/README
@@ -102,10 +102,11 @@ README
     > openssl pkcs12 -export -in alldsa.pem -name TestDsaKey -out dsakey.p12
 
     > cat rsakey.pem rsacert.pem ca2cert.pem cacert.pem > allrsa.pem
-    > openssl pkcs12 -export -in allrsa.pem -name TestDsaKey -out rsakey.p12
+    > openssl pkcs12 -export -in allrsa.pem -name TestRsaKey -out rsakey.p12
 
     > cat expiredkey.pem expiredcert.pem ca2cert.pem cacert.pem > allexpired.pem
-    > openssl pkcs12 -export -in allexpired.pem -name TestDsaKey -out expiredkey.p12
+    > openssl pkcs12 -export -in allexpired.pem -name TestExpiredRsaKey \
+      -out expiredkey.p12
 
 
    5a.
